added cv reference page

--- a/cv.html
+++ b/cv.html
@@ -18,3 +18,4 @@ My programmer profiles are below:<BR>
 
 <BR><BR>
 <a href="http://ow.ly/lmqNR">SparcEdge interview practice</a> - B+'ed? Intermediate Software Engineer practice exam<BR>
+<a href="http://chriscargile.com/school/euler/">project euler solutions I wrote</a>
